--- a/estilosParaJS.css
+++ b/estilosParaJS.css
@@ -70,17 +70,10 @@
   }
   
   .topnav {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    padding: 10px;
+    text-align: center;
     overflow: hidden;
+    font-size: larger;
+    margin-right: 100px;
   }
   
   li {
@@ -219,7 +212,7 @@
   }
   
   .footer {
-    color: #67037a;
+    
     word-spacing: 2px;
     text-align: center;
     margin: 10px;
@@ -245,8 +238,7 @@
   
   .button--state-success {
     color: #fff;
-    background: purple -webkit-gradient(linear, left top, left bottom, from(purple), to(#933d9e)) repeat-x;
-    background: purple linear-gradient(purple, #933d9e) repeat-x;
+ 
     border-color: #4a993e;
   }
   
@@ -591,9 +583,10 @@ td:last-child {
 .container1 {
   position: relative;
   width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
+  max-width: 780px;
+  margin-left: 75px;
   padding: 0 20px;
+  
   box-sizing: border-box; }
 .column,
 .columns {
@@ -601,17 +594,28 @@ td:last-child {
   float: left;
   box-sizing: border-box; }
 
+
+@media (max-width: 550px) {
+  .container1 {
+    margin-left: 20px; 
+    max-width: 10%;
+    max-height: 10%;
+  }
+} 
+
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container1 {
-    width: 85%;
+    width: 55%;
     padding: 0; }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container1 {
-    width: 80%; }
+    width: 80%;
+    margin-left: 200px; }
+    
   .column,
   .columns {
     margin-left: 4%; }
